--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,14 @@
 root: true
 
+parserOptions:
+  ecmaVersion: 2018
+  sourceType: "module"
+
 env:
+  es2017: true
   browser: true
 
-extends:
-  "htmlacademy/es5"
+globals:
+  _: readonly
+  L: readonly
+  noUiSlider: readonly
