--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "gulp": "4.0.x",
     "gulp-csso": "^3.0.1",
     "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^5.0.3",
+    "gulp-jsmin": "^0.1.5",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
     "gulp-posthtml": "^3.0.4",
