--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browser-sync": "2.27.x",
     "eslint": "^7.32.0",
     "eslint-config-htmlacademy": "^4.0.2",
+    "gh-pages": "^3.2.3",
     "gulp": "4.0.x",
     "gulp-csso": "^4.0.1",
     "gulp-group-css-media-queries": "^1.2.2",
